@@ -123,4 +123,50 @@ if ($id_module_type >= 15 && $id_module_type <= 18) {
 	$table_simple->rowstyle['snmp_1'] = 'display: none';
 	$table_simple->rowstyle['snmp_2'] = 'display: none';
 }
+
+$data = array();
+$data[0] = __('Auth user');
+$data[1] = print_input_text ('snmp3_auth_user', $snmp3_auth_user, '', 15, 60, true);
+$data[2] = __('Auth password');
+$data[3] = print_input_text ('snmp3_auth_pass', $snmp3_auth_pass, '', 15, 60, true);
+$data[3] .= print_input_hidden('active_snmp_v3', 0, true);
+if ($snmp_version != 3) $table_simple->rowstyle['field_snmpv3_row1'] = 'display: none;';
+push_table_simple($data, 'field_snmpv3_row1');
+
+$data = array();
+$data[0] = __('Privacy method');
+$data[1] = print_select(array('DES' => __('DES'), 'AES' => __('AES')), 'snmp3_privacy_method', $snmp3_privacy_method, '', '', '', true);
+$data[2] = __('privacy pass');
+$data[3] = print_input_text ('snmp3_privacy_pass', $snmp3_privacy_pass, '', 15, 60, true);
+if ($snmp_version != 3) $table_simple->rowstyle['field_snmpv3_row2'] = 'display: none;';
+push_table_simple($data, 'field_snmpv3_row2');
+
+$data = array();
+$data[0] = __('Auth method');
+$data[1] = print_select(array('MD5' => __('MD5'), 'SHA' => __('SHA')), 'snmp3_auth_method', $snmp3_auth_method, '', '', '', true);
+$data[2] = __('Security level');
+$data[3] = print_select(array('noAuthNoPriv' => __('Not auth and not privacy method'),
+	'authNoPriv' => __('Auth and not privacy method'), 'authPriv' => __('Auth and privacy method')), 'snmp3_security_level', $snmp3_security_level, '', '', '', true);
+if ($snmp_version != 3) $table_simple->rowstyle['field_snmpv3_row3'] = 'display: none;';
+push_table_simple($data, 'field_snmpv3_row3');
+
+
 ?>
+<script type="text/javascript">
+$(document).ready (function () {
+	$("#snmp_version").change(function () {
+		if (this.value == "3") {
+			$("#simple-field_snmpv3_row1").attr("style", "");
+			$("#simple-field_snmpv3_row2").attr("style", "");
+			$("#simple-field_snmpv3_row3").attr("style", "");
+			$("input[name=active_snmp_v3]").val(1);
+		}
+		else {
+			$("#simple-field_snmpv3_row1").css("display", "none");
+			$("#simple-field_snmpv3_row2").css("display", "none");
+			$("#simple-field_snmpv3_row3").css("display", "none");
+			$("input[name=active_snmp_v3]").val(0);
+		}
+	});
+});
+</script>
